# sylpheed-htmlview

./: .gitignore  .gitmodules  .travis.yml  COPYING  Makefile.am  NEWS  README.md  build.sh  configure.ac
doc/: README.ja.txt
macros/: common.mk  sylplugin_factory.m4
misc/: backport-gtkhtml3.32.2-to-gtk2.10.patch  disable-gconf-for-gtkhtml3.14.3.diff
po/: htmlview.pot  ja.po
res/: version.rc
src/: Makefile.am  copying.h  htmlview.c  htmlview.h  ui.c  ui.h
